--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-initial
+---
+title: Home
+---
+
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+  </head>
+  <body>
+    <h2>{{ "Hello World!" | downcase }}</h2>
+  </body>
+</html>
