--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 ---
-title: Home
+layout: default
+title: Cosmos
 ---
 
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
-    <h2>{{ "Hello World!" | downcase }}</h2>
-  </body>
-</html>
+<h2>{{ "Hello World!" | downcase }}</h2>
