feat(theme): Configure

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,6 +3,6 @@ layout: blog
 home-title: Recent blogs！
 description: Write whatever I want to write
 pagination:
-enabled: true
-permalink: /blog/
+    enabled: true
+permalink: /blog/index
 --- 
